// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnlinkedIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlinkedIcon"
  isBadge={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11.826,1.791c0.564,0,1.383,0.215,1.779,0.613c0.393,0.391,0.617,1.003,0.617,1.679c0,0.675-0.225,1.288-0.615,1.681 l-3.406,3.209l1.986,0.004l2.41-2.222c1.473-1.474,1.473-3.871,0-5.345c-0.711-0.712-1.66-1.105-2.672-1.105 S9.967,0.697,9.258,1.411L7.032,3.557L7.023,5.523l3.227-3.158C10.609,2.005,11.197,1.791,11.826,1.791z"
  />
  <path
    d="M5.373,13.598c-0.398,0.396-0.924,0.613-1.48,0.613c-0.558,0-1.083-0.217-1.479-0.611 c-0.815-0.816-0.816-2.545-0.002-3.359l3.101-3.234L3.551,7L1.42,9.248c-0.714,0.711-1.106,1.658-1.106,2.67 s0.393,1.961,1.104,2.672c0.711,0.713,1.66,1.105,2.673,1.105c1.011,0,1.959-0.393,2.671-1.105l2.244-2.146L9.002,10.49 L5.373,13.598z"
  />
  <path
    d="M15.98,10.127c-0.047-0.055-0.117-0.086-0.188-0.082l-3.631,0.045c-0.121,0.002-0.223,0.092-0.236,0.213 c-0.016,0.119,0.057,0.232,0.174,0.266l3.525,1.051c0.023,0.006,0.045,0.008,0.066,0.008c0.049,0,0.094-0.012,0.135-0.039 c0.059-0.039,0.1-0.102,0.107-0.17l0.074-1.1C16.02,10.25,16.027,10.18,15.98,10.127z"
  />
  <path
    d="M10.24,11.58c-0.117,0.016-0.209,0.115-0.211,0.234l-0.021,3.631c0,0.072,0.029,0.141,0.082,0.189 c0.045,0.039,0.102,0.061,0.162,0.061c0.01,0,0.021,0,0.031-0.002l1.072-0.104c0.068-0.01,0.131-0.049,0.17-0.109 c0.039-0.059,0.051-0.133,0.031-0.201l-1.051-3.523C10.475,11.637,10.361,11.562,10.24,11.58z"
  />
  <path
    d="M5.384,4.132c0.029,0.105,0.127,0.176,0.232,0.176c0.012,0,0.023-0.001,0.033-0.002c0.12-0.016,0.209-0.117,0.212-0.237 l0.045-3.631c0.001-0.071-0.028-0.14-0.082-0.187C5.773,0.204,5.7,0.183,5.631,0.192L4.536,0.297 C4.465,0.307,4.403,0.347,4.364,0.407c-0.039,0.059-0.1,0.359-0.08,0.428L5.384,4.132z"
  />
  <path
    d="M4.092,5.744c0.015-0.12-0.059-0.233-0.175-0.267L0.391,4.429c-0.067-0.021-0.142-0.01-0.2,0.029 C0.131,4.497,0.09,4.559,0.082,4.63L0.008,5.725c-0.011,0.071-0.019,0.142,0.027,0.195C0.083,5.972,0.149,6,0.219,6h0.004 l3.631-0.046C3.975,5.954,4.075,5.863,4.092,5.744z"
  />
</Icon>
`;

exports[`UnlinkedIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlinkedIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11.826,1.791c0.564,0,1.383,0.215,1.779,0.613c0.393,0.391,0.617,1.003,0.617,1.679c0,0.675-0.225,1.288-0.615,1.681 l-3.406,3.209l1.986,0.004l2.41-2.222c1.473-1.474,1.473-3.871,0-5.345c-0.711-0.712-1.66-1.105-2.672-1.105 S9.967,0.697,9.258,1.411L7.032,3.557L7.023,5.523l3.227-3.158C10.609,2.005,11.197,1.791,11.826,1.791z"
  />
  <path
    d="M5.373,13.598c-0.398,0.396-0.924,0.613-1.48,0.613c-0.558,0-1.083-0.217-1.479-0.611 c-0.815-0.816-0.816-2.545-0.002-3.359l3.101-3.234L3.551,7L1.42,9.248c-0.714,0.711-1.106,1.658-1.106,2.67 s0.393,1.961,1.104,2.672c0.711,0.713,1.66,1.105,2.673,1.105c1.011,0,1.959-0.393,2.671-1.105l2.244-2.146L9.002,10.49 L5.373,13.598z"
  />
  <path
    d="M15.98,10.127c-0.047-0.055-0.117-0.086-0.188-0.082l-3.631,0.045c-0.121,0.002-0.223,0.092-0.236,0.213 c-0.016,0.119,0.057,0.232,0.174,0.266l3.525,1.051c0.023,0.006,0.045,0.008,0.066,0.008c0.049,0,0.094-0.012,0.135-0.039 c0.059-0.039,0.1-0.102,0.107-0.17l0.074-1.1C16.02,10.25,16.027,10.18,15.98,10.127z"
  />
  <path
    d="M10.24,11.58c-0.117,0.016-0.209,0.115-0.211,0.234l-0.021,3.631c0,0.072,0.029,0.141,0.082,0.189 c0.045,0.039,0.102,0.061,0.162,0.061c0.01,0,0.021,0,0.031-0.002l1.072-0.104c0.068-0.01,0.131-0.049,0.17-0.109 c0.039-0.059,0.051-0.133,0.031-0.201l-1.051-3.523C10.475,11.637,10.361,11.562,10.24,11.58z"
  />
  <path
    d="M5.384,4.132c0.029,0.105,0.127,0.176,0.232,0.176c0.012,0,0.023-0.001,0.033-0.002c0.12-0.016,0.209-0.117,0.212-0.237 l0.045-3.631c0.001-0.071-0.028-0.14-0.082-0.187C5.773,0.204,5.7,0.183,5.631,0.192L4.536,0.297 C4.465,0.307,4.403,0.347,4.364,0.407c-0.039,0.059-0.1,0.359-0.08,0.428L5.384,4.132z"
  />
  <path
    d="M4.092,5.744c0.015-0.12-0.059-0.233-0.175-0.267L0.391,4.429c-0.067-0.021-0.142-0.01-0.2,0.029 C0.131,4.497,0.09,4.559,0.082,4.63L0.008,5.725c-0.011,0.071-0.019,0.142,0.027,0.195C0.083,5.972,0.149,6,0.219,6h0.004 l3.631-0.046C3.975,5.954,4.075,5.863,4.092,5.744z"
  />
</Icon>
`;

exports[`UnlinkedIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-UnlinkedIcon"
  isBadge={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M11.826,1.791c0.564,0,1.383,0.215,1.779,0.613c0.393,0.391,0.617,1.003,0.617,1.679c0,0.675-0.225,1.288-0.615,1.681 l-3.406,3.209l1.986,0.004l2.41-2.222c1.473-1.474,1.473-3.871,0-5.345c-0.711-0.712-1.66-1.105-2.672-1.105 S9.967,0.697,9.258,1.411L7.032,3.557L7.023,5.523l3.227-3.158C10.609,2.005,11.197,1.791,11.826,1.791z"
  />
  <path
    d="M5.373,13.598c-0.398,0.396-0.924,0.613-1.48,0.613c-0.558,0-1.083-0.217-1.479-0.611 c-0.815-0.816-0.816-2.545-0.002-3.359l3.101-3.234L3.551,7L1.42,9.248c-0.714,0.711-1.106,1.658-1.106,2.67 s0.393,1.961,1.104,2.672c0.711,0.713,1.66,1.105,2.673,1.105c1.011,0,1.959-0.393,2.671-1.105l2.244-2.146L9.002,10.49 L5.373,13.598z"
  />
  <path
    d="M15.98,10.127c-0.047-0.055-0.117-0.086-0.188-0.082l-3.631,0.045c-0.121,0.002-0.223,0.092-0.236,0.213 c-0.016,0.119,0.057,0.232,0.174,0.266l3.525,1.051c0.023,0.006,0.045,0.008,0.066,0.008c0.049,0,0.094-0.012,0.135-0.039 c0.059-0.039,0.1-0.102,0.107-0.17l0.074-1.1C16.02,10.25,16.027,10.18,15.98,10.127z"
  />
  <path
    d="M10.24,11.58c-0.117,0.016-0.209,0.115-0.211,0.234l-0.021,3.631c0,0.072,0.029,0.141,0.082,0.189 c0.045,0.039,0.102,0.061,0.162,0.061c0.01,0,0.021,0,0.031-0.002l1.072-0.104c0.068-0.01,0.131-0.049,0.17-0.109 c0.039-0.059,0.051-0.133,0.031-0.201l-1.051-3.523C10.475,11.637,10.361,11.562,10.24,11.58z"
  />
  <path
    d="M5.384,4.132c0.029,0.105,0.127,0.176,0.232,0.176c0.012,0,0.023-0.001,0.033-0.002c0.12-0.016,0.209-0.117,0.212-0.237 l0.045-3.631c0.001-0.071-0.028-0.14-0.082-0.187C5.773,0.204,5.7,0.183,5.631,0.192L4.536,0.297 C4.465,0.307,4.403,0.347,4.364,0.407c-0.039,0.059-0.1,0.359-0.08,0.428L5.384,4.132z"
  />
  <path
    d="M4.092,5.744c0.015-0.12-0.059-0.233-0.175-0.267L0.391,4.429c-0.067-0.021-0.142-0.01-0.2,0.029 C0.131,4.497,0.09,4.559,0.082,4.63L0.008,5.725c-0.011,0.071-0.019,0.142,0.027,0.195C0.083,5.972,0.149,6,0.219,6h0.004 l3.631-0.046C3.975,5.954,4.075,5.863,4.092,5.744z"
  />
</Icon>
`;
